Add entry trash operation
